@@ -3,6 +3,7 @@ Changelog
 
 1.4 - (Unreleased)
 ------------------
+* Marked more fields on Indicator Fact Sheet as searchable [demarant]
 * Fix: typo in traverse.py [ghicaale]
 
 1.3 - (2010-07-07)
